<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Polish News</string>
    <string name="divider">&#160;&#160;||&#160;&#160;</string>
    <string name="image_description">article\'s thumbnail</string>
    <string name="no_internet">No internet connection. I cannot load news.</string>
    <string name="image_no_wifi">No wifi signal.</string>
    <string name="no_news">No news found. \n\n1. Don\'t fool around with dates! &#8220;To&#8221; must be later than &#8220;from&#8221;.
        \n\n2. With categories too &#8212; they like to be checked.
        \n\n3. Still no news? Wait till The Guardian server works again.</string>
    <string name="settings">Settings</string>
    <string name="settings_title">News Settings</string>
    <string name="news_number_default">20</string>
    <string name="news_number_key" translatable="false">news_number</string>
    <string name="news_number_label">Number of news to display</string>
    <string name="lead_content_key" translatable="false">lead_content</string>
    <string name="lead_content_label">Add 10 most popular news?</string>
    <string name="lead_content_summary">Want to know Guardian\'s most popular?</string>
    <string name="lead_content_checked">Lead news added to recent ones.</string>
    <string name="lead_content_unchecked">Lead news won\'t be shown.</string>
    <string name="check_sections">Check your favourite sections</string>
    <string name="check_sections_key">check_sections</string>
    <string name="checkboxes_default">true</string>
    <string name="art_design_label">Art and design</string>
    <string name="art_design_key" translatable="false">artanddesign</string>
    <string name="books_label">Books</string>
    <string name="books_key" translatable="false">books</string>
    <string name="business_label">Business</string>
    <string name="business_key" translatable="false">business</string>
    <string name="cities_label">Cities</string>
    <string name="cities_key">cities</string>
    <string name="education_label">Education</string>
    <string name="education_key" translatable="false">education</string>
    <string name="environment_label">Environment</string>
    <string name="environment_key" translatable="false">environment</string>
    <string name="film_label">Film</string>
    <string name="film_key" translatable="false">film</string>
    <string name="life_style_label">Life and style</string>
    <string name="life_style_key" translatable="false">lifeandstyle</string>
    <string name="media_label">Media</string>
    <string name="media_key" translatable="false">media</string>
    <string name="music_label">Music</string>
    <string name="music_key" translatable="false">music</string>
    <string name="news_label">News</string>
    <string name="news_key" translatable="false">world,-uk-news,-news,-global,-us-news,-australia-news</string>
    <string name="opinion_label">Opinion</string>
    <string name="opinion_key" translatable="false">commentisfree</string>
    <string name="other_label">Other</string>
    <string name="other_key">community,-culture,-fashion,-football,-global-development,-inequality,-law,-money,
        -social-care-network,-stage,-working-in-development,-technology,-theguardian,-tv-and-radio</string>
    <string name="politics_label">Politics</string>
    <string name="politics_key" translatable="false">politics</string>
    <string name="science_label">Science</string>
    <string name="science_key" translatable="false">science</string>
    <string name="society_label">Society</string>
    <string name="society_key" translatable="false">society</string>
    <string name="sport_label">Sport</string>
    <string name="sport_key" translatable="false">sport</string>
    <string name="travel_label">Travel</string>
    <string name="travel_key" translatable="false">travel</string>
    <string name="comma">&#44;</string>
    <string name="show_news_from_day">Search news by date</string>
    <string name="from_date_key">from-date</string>
    <string name="from_date_label">from</string>
    <string name="to_date_key">to-date</string>
    <string name="to_date_label">to</string>
    <string name="default_date_start" translatable="false">1999-01-15</string>
    <string name="date_format">yyyy-MM-dd</string>
    <string name="about_app">About Polish News</string>
    <string name="app_info_title">Polish News Feed from &#8220;The Guardian&#8221;</string>
    <string name="app_info_main">&#8212;is an app with the latest Polish news from one of the biggest British newspaper.
        It\'s the 7th project in Google Developer Android Basics Nanodegree Scholarship 2018.
        \n\nChoose news by category or by time of publishing and know more! Switch on the most popular articles
        – the best news about Poles and Poland chosen by Guardian journalists – and do not miss
        them anymore. They will be displayed independently of your chosen categories or time.</string>
    <string name="app_learn_more">Learn more about the project</string>
    <string name="app_repo_info">The whole code was written by an aspiring Junior Android Developer
        Ula Drabińska. There are still a few things to improve, but if you would like to see how it
        all was done, check my repositories (for this app and others) on GitHub:</string>
    <string name="app_repo_www" translatable="false">github.com/eovka</string>
    <string name="repo_full_address">https://github.com/eovka/PolishNewsFeed</string>
    <string name="write_author">Or&#8230; write to me directly:</string>
    <string name="email_address">u.drabinska@gmail.com</string>
    <string name="email_title">Hi! I like your News Feed app :)</string>
</resources>