<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">
    <EditTextPreference
        android:defaultValue="@string/news_number_default"
        android:inputType="numberDecimal"
        android:key="@string/news_number_key"
        android:selectAllOnFocus="true"
        android:title="@string/news_number_label" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/lead_content_key"
        android:summaryOff="@string/lead_content_unchecked"
        android:summaryOn="@string/lead_content_checked"
        android:title="@string/lead_content_label" />

    <pl.pisze_czytam.polishnews.MyCheckBoxList
        android:entries="@array/sections_label"
        android:entryValues="@array/section_keys"
        android:key="@string/check_sections_key"
        android:summary="@string/check_sections"
        android:title="@string/check_sections" />
</PreferenceScreen>