<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/standard_padding">

        <TextView
            style="@style/textStyle"
            android:text="@string/app_info_title"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/title_text"
            android:textStyle="bold" />

        <TextView
            style="@style/textStyle"
            android:text="@string/app_info_main"
            android:textSize="@dimen/lead_text" />

        <TextView
            style="@style/textStyle"
            android:text="@string/app_learn_more"
            android:textSize="@dimen/title_text"
            android:textStyle="bold" />

        <TextView
            style="@style/textStyle"
            android:text="@string/app_repo_info"
            android:textSize="@dimen/lead_text" />

        <TextView
            android:id="@+id/github_address"
            style="@style/textStyle"
            android:layout_gravity="center"
            android:padding="@dimen/standard_padding"
            android:text="@string/app_repo_www"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/title_text"
            android:textStyle="bold" />

        <TextView
            style="@style/textStyle"
            android:text="@string/write_author"
            android:textSize="@dimen/lead_text" />

        <TextView
            android:id="@+id/email_address"
            style="@style/textStyle"
            android:layout_gravity="center"
            android:padding="@dimen/standard_padding"
            android:text="@string/email_address"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/title_text"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>